# Benzinpreis

./: .gitignore  CHANGELOG  CMakeLists.txt  README.md
Dialoge/: DlgHauptfenster.ui
Quellen/: DlgHauptfenster.cpp  DlgHauptfenster.h  PLZ_Datenbank.cpp  PLZ_Datenbank.h  Preissuche.h  Start.cpp  Steuerung.cpp  Steuerung.h  Tankstelle.h  Tankstellen.cpp  Tankstellen.h  Vorgaben.h  Öffnungszeiten.h
